--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
     <title>weather App</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>WEATHER APP</h1>
+    </header>
+    <div class="container">
+      <div class="temp cont">
+        <p>20</p>
+      </div>
+      <div class="location_time_date cont">
+        <h3>Location</h3>
+        <p>Time and date</p>
+      </div>
+      <div class="condition cont">
+        <img src="" alt="" />
+        <p>condition</p>
+      </div>
+    </div>
+    <div class="search_container">
+      <input type="text" placeholder="Enter you location here" />
+      <button>SEARCH</button>
+    </div>
+    <footer>
+      <h3>copyright@Syed Abdulla</h3>
+    </footer>
+  </body>
   <script src="script.js"></script>
 </html>
