ui for desktop done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
     <div class="container">
       <div class="temp cont">
+        <h4>Temperature-celsius</h4>
         <p>20</p>
       </div>
       <div class="location_time_date cont">
@@ -19,8 +20,9 @@
         <p>Time and date</p>
       </div>
       <div class="condition cont">
+        <h4>Condition</h4>
         <img src="" alt="" />
-        <p>condition</p>
+        <p></p>
       </div>
     </div>
     <div class="search_container">
